--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,6 @@
 # NeoLex Advanced Dictionary
 
-![NeoLex Logo](/images/neolex-logo.png)
+![NeoLex Logo]/images/neolex-logo.png
 
 NeoLex is a state-of-the-art, feature-rich dictionary web application designed to provide an immersive and comprehensive language exploration experience. With its sleek interface and advanced functionality, NeoLex goes beyond simple word lookups to offer a deep dive into language and etymology.
 
